# emo-bot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  user_inputs.json
src/: main.py  vad.py
src/core/: config.py  logging_config.py  message_bus.py
src/workers/: ai.py  audio_capture.py  base_worker.py  cache.py  orchestrator.py  response.py  stt.py  tts.py  wake_word.py
