[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emo-bot"
version = "0.1.0"
description = "Production-grade voice assistant robot with offline-first architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Parham Peyvasteh", email = "your.email@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "webrtcvad-wheels>=2.0.0",        # <-- use this instead of webrtcvad
    "pvporcupine>=3.0.0",
    "vosk>=0.3.45",
    "openai-whisper>=20240930",
    # "coqui-tts>=0.24.0",            # removed – use Windows SAPI or pyttsx3
    "bleak>=0.21.0",
    "pyaudio>=0.2.14",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "langdetect>=1.0.9",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = ["E501"]  # Ignore line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true